Fix spacing issue

--- a/css/main.css
+++ b/css/main.css
@@ -12,46 +12,42 @@ html {
 body {
   vertical-align: middle;
   text-align: center;
-  margin: 0;
+  padding: 2em 0;
 }
 
 .img {
+  max-width: 25em;
   display: inline-block;
-  padding: .4em .75em .5em;
+  padding: 1em 1em 0;
 }
 
 img {
   width: 100%;
   display: block;
-  max-width: 25em;
-  min-width: 20em;
-  padding-top: 2em;
-  margin-bottom: 1.5rem;
+  margin-bottom: 0 auto;
 }
 
 .main {
   display: inline-block;
   text-align: left;
   max-width: 25em;
-  padding-top: 1em;
-  margin: 0 1.5rem;
+  padding: 1em;
 }
 
 h2 {
-  display: block;
   color: #333;
   font-weight: bold;
-  margin-top: 0;
+  margin-bottom: 1em;
 }
 
 p {
   display: inline;
+  margin-bottom: 2em;
 }
 
 .btn {
   display: block;
   border-radius: 6px;
-  margin-top: 1.5rem;
   padding: .4em .75em .5em;
   text-decoration: none;
   text-align: center;
